Hygieia_UI/UI/src/app/css/dashboardCSS.less
/* ... */
button.accordion.active, button.accordion:hover {
    background-color: #ddd;
}
button.accordion:after {
    content: '\002B';
    color: #777;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}
button.accordion.active:after {
    content: "\2212";
}
div.panel {
    padding: 0 18px;
    background-color: white;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}
 .table-bordered td {
 	border-top: 1px solid #ddd!important;
 	border-bottom:1px solid #ddd!important;
 }
 .table-bordered th,{
 	border-top: 1px solid #ddd!important;
 	border-bottom:3px solid #ddd!important;
 }
 .c3-axis-y text 
{
  width:30px; //change the size of the fonts
}

.c3-axis-x text 
{
  width:30px; //change the size of the fonts
}

.widget-modal{
	padding:20px !important;
}
.widget-modal .widget-modal-heading{
	text-align:left !important;
	background: #fcfcfc;
    border-bottom: 1px solid #d6d6d6 !important;
    margin-bottom:2% !important;
    font-weight: 400;
    padding:0px !important;
}

.dualmultiselect .pool{
	height:102px !important;
}
.shareproject-labels-props{
	font-weight: 500;
    color: #666666;
}
.repo-view .repo-summary-table td:first-child{
	width:3% !important;
}
.feature-view .story-summary-type{
	font-weight:400 !important;
}

//dual list css//

.dualmultiselect label {
  margin: 10px;
}

.dualmultiselect .btn {
  margin: 10px;
}

.dualmultiselect .pool {
  border: 1px solid #999;
  border-radius: 4px;
  padding: 10px;
  margin: 5px;
  height: 150px;
  overflow-y: scroll;
}

.dualmultiselect .pool ul {
  list-style: none;
  padding-left: 0px;
}

.dualmultiselect .pool ul li {
  width: 100%;
  padding: 4px 8px 4px 4px;
  border-bottom: 1px dotted #CFCFCF;
}

.dualmultiselect .pool ul li a:hover {
  text-decoration: none;
}

.alert, .thumbnail{
	margin-bottom:0px !important;
}

body {
       font-family: "Segoe UI";
  }

//login page styles and signup page//

.signIn-signup-btn-props{
	background: #1766A4 !important;
	border: #1766A4 !important;
	box-shadow: none !important;
	font-size: 12px !important;
	border-radius: 3px !important;
	font-weight: normal !important;
}
.creatnew-login-label-props{
	color: #3B7EB2;
	cursor: pointer;
}
.upper-label-props{
	font-weight: normal !important;
	color: #999999 !important;
}
.emu-logo-props{
	height: 70px;
    width: 70px;
}
.emu-header-props{
	font-size: 15px;
	color: #848484;
	font-weight: 600;
}
.inputgroup-props{
	width: 100%;
}
.inputbox-props{
	border-radius:1px !important;
}
.poweredBy-label-specs{
	color: #000;
}
.footer-padding-props{
	padding-left: 8%;
	padding-top: 2%;
}
.graph-bg-gradient{
    border-radius:4px;
    background: #f2f2f2; 
   // background: -webkit-linear-gradient(#f2f2f2, white); //
  //  background: -o-linear-gradient(#f2f2f2, white); //
   // background: -moz-linear-gradient(#f2f2f2, white); //
   // background: linear-gradient(#f2f2f2, white); //
}
.build-widget-header-padding{
    color:black;
    text-shadow:none;
    margin-top: 0px;
    margin-bottom: 4.5%;
}
.ct-major-twelfth{
    height:170px !important;
    width:90% !important;
}
.border-prop-modals{
    border-radius:4px !important;
    background:#fff !important;
}
.edit-inputbox-props{
    border: 1px solid #ccc;
    border-radius: 4px;
}
input.middle:focus {
    border:1px solid #66afe9;
}
.text-standard-date{
    margin-left:1em !important;
}
.build-view .build-chevron{
    margin-right:3.2em !important;
}
.pagination-btn-props{
    background: #004073!important;
    border: 1px solid #004073!important;
    border-radius: 4px;
    color: #fff;
    width: 56px;
    height: 29px;
    font-size: 13px;
}


//modals allign center to the screen//
.modal {
  text-align: center;
  padding: 0!important;
}

.modal:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  margin-right: -4px;
}

.modal-dialog {
  display: inline-block;
  text-align: left;
  vertical-align: middle;
}
.modal-content{
    border:none !important;
}
.font-props-main-dashboard{
    font-weight:500 !important;
    font-size:11px !important;
}
.total-builds-text-props{
    width: 40px;
    height: 40px;
    border: 1px solid #bfbfbf;
    border-radius: 48px;
    padding-top: 8%;
    background: #d6d6d6;
    font-weight: 600;
    text-align: center;
    font-size:14px !important;
}
.total-builds-label-props{
    text-align: inherit;
    font-weight: 500 !important;
    font-size:11px !important;
}
.ago-test-pros{
    font-size: 12px;
    color: #666;
    text-shadow: none;
    font-weight: 600;
}
.widget-modal .widget-modal-close{
    top:0!important;
    right:0 !important;
}
.sub-header-maindashboard{
    font-weight:600 !important;
    font-size:14px !important;
    color: #000 !important;
    text-shadow: none !important;
}
.maanditory-red-key{
    color:red;
}
.log-out-icon-size{
    width:30px;
    height:30px;
}
.jira-header-padding-props{
    padding-left:0px;
}
.form-control{
    height:30px !important;
    padding-top:4px !important;
}
.all-opopups-text-left{
    text-align:left;
    font-weight: 500;
    width: 100%;
   
}
.padding-bw-cols{
    padding-top:3%;
}
.sign-out-box-specs{
    float: right;
    right: 2%;
    top: 20%;
}

.dash-row, .dash-row .fa, tr.dash-row>td{
    line-height:2.6rem !important;
}

.style_prevu_kit
{
    display:inline-block;
    border:0;
   
    position: relative;
    -webkit-transition: all 200ms ease-in;
    -webkit-transform: scale(1); 
    -ms-transition: all 200ms ease-in;
    -ms-transform: scale(1); 
    -moz-transition: all 200ms ease-in;
    -moz-transform: scale(1);
    transition: all 200ms ease-in;
    transform: scale(1);   

}
/* ... */

